# MacRadar

./: .env.example  .gitignore  ARAMA_EKRANI_DOGRULAMA.md  ARAMA_EKRANI_OPTIMIZASYON.md  App.tsx  BADGE_GORULDU_MEKANIZMASI.md  CADDE_ISTEKLERI_BADGE_FIX.md  CADDE_ISTEKLERI_INSTANT_LOADING.md  CADDE_ISTEKLERI_KALICI_CACHE.md  CADDE_ISTEKLERI_KALICI_FINAL.md  README.md  SORUN_COZUMLERI_RAPOR.md  UYGULAMA_GELISTIRME_OZET.md  app.json  babel.config.js  index.js  jest.config.js  jest.setup.js  metro.config.js  package-lock.json  package.json  react-native.config.js  replace.cjs  replace2.cjs  tailwind.config.js
__mocks__/: nativewind.js
__tests__/: App.test.tsx  AppShell.session-invalidation.test.tsx  AppShell.tabs-navigation-smoke.test.tsx  messageContent.test.ts  messageListState.test.ts  postComposerValidation.test.ts  sessionStorage.pendingQueue.test.ts
android/: build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle  google-services.json
backend/: .env.example  API_DOCUMENTATION.md  README.md  debug.txt  docker-compose.yml  go.mod  package-lock.json  package.json  server.js  test-output.txt
backend/rust/sensor-hub/: Cargo-simple.toml  Cargo.toml
backend/rust/sensor-hub/src/: main.rs  node-main.js  simple-main.rs
docs/: MOBILE_MANUAL_QA_CHECKLIST.md  MOBILE_QA_RESULTS_2026-03-24.md  MOBILE_QA_RESULTS_TEMPLATE.md  android-release-signing.md  mobile-api-env.md  realtime-motion-system.md  realtime-tracking.md
ios/: Podfile
scripts/: build-calling-codes.js  extract-en-translations.mjs  generate-app-env.js  patch-css-interop.js
(+389 files in other folders)
